sending an email endpoint
