# models/models.go
@@ -166,3 +166,9 @@ func GenerateSalt() string {
 	}
 	return base64.StdEncoding.EncodeToString(salt)
 }
+
+type EmailRequest struct {
+	To      string `json:"to"`
+	Subject string `json:"subject"`
+	Body    string `json:"body"`
+}
